web/app/components/common/post-list/post-item.css
.post-item {
    position: relative;
    height: 100%;
    border-top: 1px solid #eee;
    padding: 8px;
    overflow: hidden;
}

.post-item > div > .title {
    margin-bottom: 5px;
}

.right {
    float: right;
}

.left {
    float: left;
}

.fa {
    font-size: 18px;
}

.top {
    margin-bottom: 8px;
}

.votes {
    float: left;
    margin-right: 10px;
    margin-top: -5px;
}

.image {
    float: left;
    height: 100%;
    margin-right: 10px;
}

